# graduation-research-project

./: .gitignore  README.md
project/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  shadernodedatatypes.hpp
project/compilers/: CMakeLists.txt  CompileWrapper.cpp  CompileWrapper.hpp  CompilerController.cpp  CompilerController.hpp  CompilerWrapper.cpp  CompilerWrapper.hpp  CompillerController.cpp  CompillerController.hpp  ICompiler.hpp  icompiler.cpp  test.cpp
project/compilers/DefaultCompiler/: DefaultGlslCompiler.cpp  DefaultGlslCompiler.hpp
project/compilers/DefaultGlslCompiler/: DefaultGlslCompiler.cpp  DefaultGlslCompiler.hpp
project/dependencies/: CMakeLists.txt
project/dependencies/nodeeditor-master/: CMakeLists.txt
project/dependencies/nodeeditor-master/include/nodes/internal/: Node.hpp  NodeDataModel.hpp
project/dependencies/nodeeditor-master/src/: Node.cpp
project/dialogs/WelcomeWindowDialog/: WelcomeWindowDialog.cpp  WelcomeWindowDialog.hpp  WelcomeWindowDialog.ui  WelcomeWindowDialogSources.qrc
project/dialogs/WelcomeWindowDialog/src/: base.sdsln
project/editor/: BaseShaderNodeDataModel.hpp  CMakeLists.txt  EditorController.cpp  EditorController.hpp  EditorGraphicsScene.cpp  EditorGraphicsScene.hpp  FunctionalNodes.cpp  GlobalConstants.hpp  ShaderNodeDataTypes.hpp  VariableNodes.cpp  VariableNodes.hpp  VariableValueControlsFactory.cpp  VariableValueControlsFactory.hpp  VariableWidgets.cpp  VariableWidgets.hpp  functionalnodes.hpp
project/editor/nodeeditor/: CMakeLists.txt
project/editor/nodeeditor/include/nodes/: NodePainter
project/editor/nodeeditor/include/nodes/internal/: Connection.hpp  ConnectionStyle.hpp  DataModelRegistry.hpp  FlowScene.hpp  Node.hpp  NodeData.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodePainter.hpp  NodeState.hpp  (+1 more)
project/editor/nodeeditor/src/: Connection.cpp  ConnectionPainter.cpp  ConnectionStyle.cpp  DataModelRegistry.cpp  FlowScene.cpp  FlowView.cpp  Node.cpp  NodeConnectionInteraction.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodeState.cpp
project/editor/nodes/: CommonFunctionalNodes.cpp  CommonFunctionalNodes.hpp  DataTypeInteractionRules.cpp  DataTypeInteractionRules.hpp  FunctionalNodes.cpp  FunctionalNodes.hpp  GeometrycFunctionalNodes.cpp  GeometrycFunctionalNodes.hpp  LogickalNodes.cpp  LogickalNodes.hpp  VariableNode.cpp  VariableNode.hpp
project/editor/nodes/ConstVariables/: ConstVariableNode.cpp  ConstVariableNode.hpp  ConstVariablesNodes.cpp  ConstVariablesNodes.hpp
project/editor/nodes/VariableNode/: VariableNode.cpp  VariableNode.hpp  VariableNodePainterDelegate.cpp  VariableNodePainterDelegate.hpp
project/editor/nodesmodels/: DefaultDataModelRegistry.cpp  DefaultDataModelRegistry.hpp
project/editor/nodesstore/: FlowLayout.cpp  FlowLayout.hpp  NodeStoreWidget.cpp  NodeStoreWidget.hpp  NodeWidget.cpp  NodeWidget.hpp
project/editor/variablecontroller/: VariablesController.cpp  VariablesController.hpp
project/editor/variableconverters/BaseTypesConverters/: BaseTypesConverters.cpp  BaseTypesConverters.hpp
project/editor/variableconverters/VectorConverter/: VectorConverterDataModel.cpp  VectorConverterDataModel.hpp  VectorConverterScene.cpp  VectorConverterStyle.cpp  VectorConverterStyle.hpp  VectorConverterWidget.cpp  VectorConverterWidget.hpp  VectorPointGraphicsItem.cpp
project/editor/variableconverters/VectorCreator/: VectorCreator.cpp  VectorCreator.hpp
project/editor/variableconverters/VectorDecomposConverter/: VectorDecomposConverter.cpp  VectorDecomposConverter.hpp
project/editor/variableconvertors/VectorConveroter/: VectorConnectGraphicsItem.cpp  VectorConnectGraphicsItem.hpp  VectorConverterDataModel.cpp  VectorConverterDataModel.hpp  VectorConverterScene.cpp  VectorConverterScene.hpp  VectorConverterTypes.hpp  VectorConverterWidget.cpp  VectorConverterWidget.hpp  VectorPointGraphicsItem.hpp
project/editor/variableconvertors/VectorDecomposConverter/: VectorDecomposConverter.cpp  VectorDecomposConverter.hpp
project/editor/variablescontroller/: NodeDataTypeFactory.cpp  NodeDataTypeFactory.hpp  NodeDataTypeSerializer.cpp  NodeDataTypeSerializer.hpp  VariableDataModels.hpp  VariableDataModelsFactory.cpp  VariableDataModelsFactory.hpp  VariableDataModesl.cpp  VariableEditors.cpp  VariableEditors.hpp  VariableEditorsPool.cpp  VariableEditorsPool.hpp  VariableValueEditors.cpp  VariableValueEditors.hpp  VariableValueEditorsFactory.cpp  VariableValueEditorsFactory.hpp  VariablesController.cpp  VariablesController.hpp  VariablesControllerWidget.cpp  VariablesControllerWidget.hpp  VariablesEditorWidget.cpp  VariablesEditorWidget.hpp  VariablesListWidget.cpp  VariablesListWidget.hpp
project/resources/: resources.qrc
project/src/: CMakeLists.txt  main.cpp
project/src/ShaderNodes/: ColorData  ColorNodeModel  DoubleData  DoubleNodeModel  FloatData  FloatNodeModel  Int16Data  Int16NodeModel  Int32Data  Int32NodeModel  Matrix2Data  Matrix2NodeModel  Matrix3Data  Matrix3NodeModel  Matrix4Data  Matrix4NodeModel  SamplerData  SamplerNodeModel  Vector2Data  Vector2NodeModel  Vector3Data  Vector3NodeModel  Vector4Data  Vector4NodeModel
project/src/ShaderNodes/Data/ClassDoubleData/: DoubleData.cpp  DoubleData.hpp
project/visualizers/: CMakeLists.txt  ICamera.hpp  ITargetSceneRenderer.hpp  LookCentralObjectCamera.cpp  LookCentralObjectCamera.hpp  OpenGLScene.cpp  OpenGLScene.hpp  TargetObject.hpp  TargetSceneRendererFactory.cpp  TargetSceneRendererFactory.hpp  TargetSceneWrapperWidget.cpp  TargetSceneWrapperWidget.hpp  VariableValueControlsFactory.cpp  VariableValueControlsFactory.hpp  VariableWidgets.cpp  VariableWidgets.hpp  VisualizerController.cpp  VisualizerController.hpp  targetobject.cpp
project/visualizers/resources/: fragment_base.glsl  fragment_ssao.glsl  src.qrc  vertex_base.glsl  vertex_ssao.glsl
project/windows/: MenagetWidget.cpp  MenagetWidget.hpp  WidgetsMenager.cpp  WidgetsMenager.hpp  WindowsMenager.cpp  WindowsMenager.hpp
project/windows/Dialogs/: CreateProjectDialog.cpp  CreateProjectDialog.hpp  CreateProjectDialog.ui
(+36 files in other folders)
